--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="car_teal_200">#ff80cbc4</color>
     <color name="car_teal_700">#ff00796b</color>
     <color name="car_top_level_highlight">#2E3134</color>
+    <color name="grey">#BEBEBE</color>
 </resources>
