--- a/res/layout/sharing.xml
+++ b/res/layout/sharing.xml
@@ -56,7 +56,7 @@
             android:text="@string/serve" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/sharelink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -115,7 +115,7 @@
             android:id="@+id/lock"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/unlocked"
+            android:background="@drawable/unlocked"
             app:layout_constraintStart_toStartOf="@+id/padi"
             app:layout_constraintTop_toTopOf="@+id/padi" />
 
