Nice Style added

--- a/res/layout/sharing.xml
+++ b/res/layout/sharing.xml
@@ -3,129 +3,160 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg"
+    android:padding="50dp">
 
     <TextView
         android:id="@+id/appname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         android:text="@string/app_name"
         android:textAllCaps="true"
+        android:textColor="#009FE3"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:text="@string/description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appname" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:orientation="vertical"
+
+        android:paddingRight="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description">
-
-        <Button
-            android:id="@+id/stopmirror"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="@string/stop_mirror" />
+        app:layout_constraintTop_toBottomOf="@+id/appname">
 
         <Button
             android:id="@+id/startmirror"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginBottom="32dp"
             android:text="@string/start_mirror" />
 
         <Button
             android:id="@+id/serve"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginBottom="32dp"
             android:text="@string/serve" />
 
         <Button
             android:id="@+id/sharelink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
             android:text="@string/recommend" />
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <Button
+        android:id="@+id/cid"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="25dp"
+        android:background="@drawable/display_button_border"
+        android:gravity="bottom|center"
+        android:maxWidth="1000dp"
+        android:minWidth="200dip"
+        android:text="@string/cid"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@+id/padi"
         app:layout_constraintStart_toEndOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/description">
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
-        <SurfaceView
-            android:id="@+id/surface_view_"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/padi"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/display_button_border"
+        android:gravity="bottom|center"
+        android:maxWidth="1000dp"
+        android:text="@string/padi"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cid"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
-        <Button
-            android:id="@+id/cid"
-            android:layout_width="wrap_content"
-            android:layout_height="141dp"
-            android:gravity="bottom|center"
-            android:maxWidth="1000dp"
-            android:background="@drawable/display_button_border"
-            android:text="@string/cid"
-            android:textColor="@color/grey"
-            app:cornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/padi"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageButton
+        android:id="@+id/unlocked"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/unlocked"
+        app:layout_constraintEnd_toStartOf="@+id/touchable"
+        app:layout_constraintStart_toStartOf="@+id/padi"
+        app:layout_constraintTop_toTopOf="@+id/padi" />
 
-        <Button
-            android:id="@+id/padi"
-            android:layout_width="wrap_content"
-            android:layout_height="141dp"
-            android:gravity="bottom|center"
-            android:maxWidth="1000dp"
-            android:background="@drawable/display_button_border"
-            android:text="@string/padi"
-            android:textColor="@color/grey"
-            app:cornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cid"
-            app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:id="@+id/unlockglow"
+        android:layout_width="0dp"
+        android:layout_height="10dp"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/glowing"
+        android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="@+id/unlocked"
+        app:layout_constraintStart_toStartOf="@+id/unlocked"
+        app:layout_constraintTop_toBottomOf="@+id/unlocked" />
 
-        <ImageButton
-            android:id="@+id/lock"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/unlocked"
-            app:layout_constraintStart_toStartOf="@+id/padi"
-            app:layout_constraintTop_toTopOf="@+id/padi" />
+    <TextView
+        android:id="@+id/touchable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/touchable"
+        app:layout_constraintBottom_toBottomOf="@+id/unlocked"
+        app:layout_constraintEnd_toEndOf="@+id/padi"
+        app:layout_constraintStart_toStartOf="@+id/padi" />
 
-        <TextView
-            android:id="@+id/touchable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/touchable"
-            app:layout_constraintBottom_toBottomOf="@+id/lock"
-            app:layout_constraintStart_toEndOf="@+id/lock" />
+    <ImageButton
+        android:id="@+id/locked"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/locked"
+        app:layout_constraintEnd_toEndOf="@+id/padi"
+        app:layout_constraintStart_toEndOf="@+id/touchable"
+        app:layout_constraintTop_toTopOf="@+id/padi" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/lockglow"
+        android:layout_width="0dp"
+        android:layout_height="10dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/glowing"
+        android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="@+id/locked"
+        app:layout_constraintStart_toStartOf="@+id/locked"
+        app:layout_constraintTop_toBottomOf="@+id/locked" />
+
+    <SurfaceView
+        android:id="@+id/surfaceView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/stopmirror"
+        app:layout_constraintEnd_toEndOf="@+id/padi"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/appname"
+        tools:visibility="invisible" />
+
+    <Button
+        android:id="@+id/stopmirror"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="0dp"
+        android:paddingLeft="0dp"
+        android:gravity="top"
+        android:text="@string/stop_mirror"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/surfaceView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
