--- a/res/drawable/display_button_border.xml
+++ b/res/drawable/display_button_border.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent" />
+    <solid android:color="@color/blue_transparent" />
     <stroke
         android:width="2dp"
         android:color="@color/grey" /> <!-- Farbe des Rahmens -->
