--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="car_teal_700">#ff00796b</color>
     <color name="car_top_level_highlight">#2E3134</color>
     <color name="grey">#BEBEBE</color>
+    <color name="white">#FFFFFF</color>
+    <color name="blue_transparent">#803A429B</color>
 </resources>
