--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -62,14 +62,14 @@
 
     <style name="SharingButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@null</item>
-        <item name="android:padding">16dp</item>
+        <item name="android:paddingLeft">0dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">#FFFFFF</item>
 <!--        android:background="@android:color/transparent"-->
         <!--        <item name="android:paddingLeft">16dp</item>-->
-<!--        <item name="android:paddingRight">16dp</item>-->
-<!--        <item name="android:paddingBottom">16dp</item>-->
-<!--        <item name="android:paddingTop">16dp</item>-->
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:paddingTop">16dp</item>
     </style>
 
     <style name="SharingActivityTheme" parent="Theme.AppCompat">
@@ -79,6 +79,6 @@
         <item name="android:checkboxStyle">@style/CheckBoxStyle</item>
         <item name="android:spinnerStyle">@style/SpinnerStyle</item>
         <item name="android:fontFamily">@font/bmw_type_next_pro</item>
-        <item name="android:textColor">@color/grey</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
